--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
@@ -16,9 +17,11 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.286.0",
     "next": "13.5.4",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
